changes on booking feature

--- a/web.portal/src/app/book-detail/room-edit/room-edit.component.html
+++ b/web.portal/src/app/book-detail/room-edit/room-edit.component.html
@@ -1,7 +1,11 @@
 <div class="card-header d-flex justify-content-between">
   <h4 class="my-0 font-weight-normal">Alterar quarto</h4>
-  <div class="btn-toolbar mb-2 mb-md-0">
-    <button class="btn btn-sm btn-outline-success arrow-left" [disabled]="!room.valid" (click)="enableDisableRoomEdit()">
+  <div class="btn-toolbar mb-2 mb-md-0">   
+    <button class="btn btn-sm btn-outline-secondary"  (click)="hideRoomEdit(null)">
+      <span data-feather="calendar"></span>
+      Cancelar
+    </button>
+    <button class="btn btn-sm btn-outline-success" [disabled]="!room.valid" (click)="save()">
       <span data-feather="calendar"></span>
       Salvar
     </button>
@@ -12,9 +16,9 @@
     <dl class="row">
       <dt class="col-2">Quartos disponíveis:</dt>
       <dd class="col-2">
-        <select id="room" class="form-control" [(ngModel)]="room.id" name="room" required #room="ngModel">
+        <select id="room" class="form-control" [(ngModel)]="roomSelected" name="room" required #room="ngModel">
           <option value=""></option>
-          <option *ngFor="let m of rooms" value="{{ m.id }}">{{ m.doorNumber }}</option>
+          <option *ngFor="let m of queryResult.items" value="{{ m.id }}">{{ m.doorNumber }}</option>
         </select>
         <div class="alert alert-danger" *ngIf="room.touched && !room.valid">Selecione um quarto.</div>
       </dd>
